@@ -8,6 +8,7 @@ Revision history for List-Lazy
   [ DOCUMENTATION ]
 
   [ ENHANCEMENTS ]
+  - Generators can now produce sub-lazy lists.
 
   [ NEW FEATURES ]
 
